--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ repositories {
 }
 
 dependencies {
- testCompile group: 'junit', name: 'junit', version: '4.12'
+  testCompile group: 'junit', name: 'junit', version: '4.12'
  	compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -54,6 +54,9 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-mail")
 	compile 'org.springframework:spring-context-support'
     compile 'com.sun.mail:javax.mail'
+	compile ('org.web3j:core:3.6.0')
+	implementation 'org.web3j:solidity-gradle-plugin:0.1.6'
+	//implementation 'org.web3j:infura:4.0.3'
 	// implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time'
 
 
