--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
@@ -22,10 +24,10 @@ spring.resources.chain.strategy.content.paths=/**
 
 
 ## Email Send Configuration_SMTP
-spring.mail.host=smtp.naver.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bindt89@naver.com
-spring.mail.password=
+spring.mail.username=kislee300@gmail.com
+spring.mail.password=plzneqcxvutarmjh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
